@@ -19,6 +19,7 @@ The rules for this file:
  * 2.1.0
 
 Fixes
+  * Prevents attempts to close an already closed NamedStream (Issue #3386)
   * Added missing exe_err import in hole.py. Fixed a bug in HoleAnalysis where 
     kwarg was passed instead of object to generate path (Issue #3493, PR #3496)
   * Fixes creation of vmd surfaces in hole2 when using non-contiguous frames
